# secureML-demo

./: .data  .gitignore  README.md  app.py  line_notifier.py  parking_config.json.example  parking_detector.py  pyproject.toml  requirements.txt  stream.py
data_washing_experiment/: blind_feature_detector.py  cifar10_non_iid_mprobe_epoch10_audit.yaml  cifar10_non_iid_mprobe_epoch10_fixedpoison_audit.yaml  clean_reference_detector.py  materialized_trigger_detector.py  plot_materialized_threshold_distribution.py  poison_audit.py  run_blind_feature_detector.sh  run_cifar10_non_iid_mprobe_epoch10_audit.sh  run_cifar10_non_iid_mprobe_epoch10_fixedpoison_audit.sh  run_clean_reference_detector.sh  run_full_fixedpoison_pipeline.sh  run_materialized_trigger_detector_fixedpoison.sh  sweep_blind_feature_thresholds.py
data_washing_experiment/output/blind_feature_detector_20260605_154715/: predicted_clean_indices.txt  predicted_poison_indices.txt  summary.json  suspicious_scores.csv
data_washing_experiment/output/blind_feature_detector_20260605_155015/: best_sweep_result.json  clean_reference_scores.csv  predicted_clean_indices.txt  predicted_poison_indices.txt  summary.json  suspicious_scores.csv  (+1 more)
masks/: roi_cam1.json  roi_cam2.json
saved_models/model_CifarFedProtopnet_Jun.03_20.38.15_cifar10_mprobe_non_iid_epoch10_fixedpoison_data_washing_seed0/: all_client.txt  clustering.txt  defense_time.txt  dist.txt  dist2.txt  dist_curent.txt  eps_search.txt  log.txt  params.yaml.txt  std.txt  time_epoch.txt  upload_resource.csv  upload_resource.txt
templates/: index.html
(+58 files in other folders)
