[project]
name = "devops-demo"
version = "0.1.0"
description = "People Detection + Parking Violation Detection Demo"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pillow>=9.0.0",
    "opencv-python>=4.7.0",
    "numpy>=1.24.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.0",
    "requests>=2.28.0",
]
